[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/objects/buildings/Building.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/HPbar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/FCTManager.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 55.75, 110 )

[node name="Building" type="StaticBody2D"]
position = Vector2( 2, 0 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 34, -111 )
offset = Vector2( 10, -26 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -65, 21, 2, 60, 68, 19, 5, -15 )

[node name="HPbar" parent="." instance=ExtResource( 2 )]
margin_left = -48.0
margin_top = -421.0
margin_right = 592.0
margin_bottom = -321.0
rect_scale = Vector2( 0.362703, 0.245242 )
rect_pivot_offset = Vector2( -107.407, 27.5074 )
max_value = 1000.0
value = 1000.0

[node name="FCTManager" parent="." instance=ExtResource( 3 )]
position = Vector2( -3, -216 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 3, -10 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="mouse_entered" from="Hitbox" to="." method="_on_Hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Hitbox" to="." method="_on_Hitbox_mouse_exited"]
